--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2356,7 +2356,7 @@ transfers.requested=Angefordert
 #orig#transfers.searching=Searching...
 transfers.searching=Suche...
 #orig#transfers.swarm=Swarm\: {0} members
-transfers.swarm=Schwarm\: {0} Quellen
+transfers.swarm=Multi\: {0} Quellen
 #orig#transfers.to=To
 transfers.to=Zu
 #orig#transfers.verifying=Finalizing
