refs #1826 Completely exctracted overall sync calculation into FolderRepoModel. Also using a more heuristic approach to detect "in sync" state: Simple is in sync when no synchronization action is running (upload, download or scan)

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1413,10 +1413,12 @@ home_tab.online_storage.title=Benutzerkonto
 home_tab.online_storage.usage=Online Nutzung\: {0} ({1}%)
 ##home_tab.status=Status
 #orig#home_tab.sync_eta=All folders will be synchronized {0}
-home_tab.sync_eta=Alle Folder synchronisiert um {0}
+home_tab.sync_eta=Voraussichtlich synchronisiert {0}
 ##home_tab.sync_unknown=Synchronization date unknown
 #orig#home_tab.synchronizing=Synchronization in progress...
-home_tab.synchronizing=Synchronisation l\u00e4uft...
+home_tab.synchronizing.0=Synchronisation l\u00e4uft.
+home_tab.synchronizing.1=Synchronisation l\u00e4uft..
+home_tab.synchronizing.2=Synchronisation l\u00e4uft...
 #orig#home_tab.tell_friend.text=Tell a friend about {APPNAME}
 home_tab.tell_friend.text={APPNAME} weiterempfehlen
 #orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
