--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1223,7 +1223,7 @@ friend_search.node_table.last_seen_online=Zuletzt online
 #orig#friend_search.node_table.name=Computer
 friend_search.node_table.name=Name
 #orig#friend_search.node_table.on_local_network=LAN
-friend_search.node_table.on_local_network=Im LAN
+friend_search.node_table.on_local_network=LAN
 
 #orig#friends_panel.connected=Connected
 friends_panel.connected=Verbunden
