--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -926,7 +926,7 @@ file_details_panel.modified_date=Ge\u00e4ndert am
 #orig#file_details_panel.name=Name
 file_details_panel.name=Name
 #orig#file_details_panel.newer_available=Newer version available
-file_details_panel.newer_available=Neuere Version verf\u00fcgbar
+file_details_panel.newer_available=Neuere Version verf\u00fcgbar ({0})
 #orig#file_details_panel.normal=Local available
 file_details_panel.normal=Lokal verf\u00fcgbar
 #orig#file_details_panel.not_available=Not available
@@ -1413,8 +1413,8 @@ home_tab.online_storage.title=Benutzerkonto
 home_tab.online_storage.usage=Online Nutzung\: {0} ({1}%)
 ##home_tab.status=Status
 #orig#home_tab.sync_eta=All folders will be synchronized {0}
-home_tab.sync_eta=Voraussichtlich synchronisiert {0}
-##home_tab.sync_unknown=Synchronization date unknown
+home_tab.sync_eta=Voraussichtlich synchronisiert: {0}
+home_tab.sync_unknown=Synchronization date unknown
 #orig#home_tab.synchronizing=Synchronization in progress...
 home_tab.synchronizing.0=Synchronisation l\u00e4uft.
 home_tab.synchronizing.1=Synchronisation l\u00e4uft..
