--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1414,7 +1414,7 @@ home_tab.online_storage.usage=Online Nutzung\: {0} ({1}%)
 ##home_tab.status=Status
 #orig#home_tab.sync_eta=All folders will be synchronized {0}
 home_tab.sync_eta=Voraussichtlich synchronisiert: {0}
-home_tab.sync_unknown=Synchronization date unknown
+home_tab.sync_unknown=Voraussichtlich synchronisiert: unbekannt
 #orig#home_tab.synchronizing=Synchronization in progress...
 home_tab.synchronizing.0=Synchronisation l\u00e4uft.
 home_tab.synchronizing.1=Synchronisation l\u00e4uft..
