--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2313,15 +2313,13 @@ transfer.problem.transfer.broken=\u00dcbertragung abgebrochen
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=\u00dcbertragungsproblem\: {0}
 
-#orig#transfer_mode.auto_download_friends.name=Auto-download friends
-transfer_mode.auto_download_friends.name=Automatisch herunterladen (Freunde)
 #orig#transfer_mode.automatic_download.name=Automatic download
 transfer_mode.automatic_download.name=Automatisch herunterladen
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
-##transfer_mode.backup_target.name=Backup target
+transfer_mode.automatic_synchronization.name=Auto sync (jede Minute)
+transfer_mode.automatic_synchronization_10min.name=Auto sync (10 Minuten)
+transfer_mode.backup_source.name=Backup Quelle (5 Minuten)
+transfer_mode.backup_source_hour.name=Backup Quelle (jede Stunde)
+transfer_mode.backup_target.name=Backup Ziel
 #orig#transfer_mode.custom.name=Custom profile
 transfer_mode.custom.name=Eigener Modus
 #orig#transfer_mode.disabled.name=Disabled
