--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2332,7 +2332,7 @@ transfer_mode.manual_synchronization.name=Manuell synchronisieren
 transfer_mode.no_sync.name=Keine Synchronisation
 
 #orig#transfers.completed=Completed
-transfers.completed=Vollst\u00e4ndig
+transfers.completed=Fertig {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Kopiere Daten
 #orig#transfers.from=From
