--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1302,7 +1302,7 @@ transfer.problem.temp.file.write=Unable to write to tempfile
 transfer.problem.transfer.broken=Transfer broken
 transfer.problem.transfer.exception=There was a TransferException\: {0}
 
-transfers.completed=Completed
+transfers.completed=Completed {0}
 transfers.copying=Copying data
 transfers.from=From
 transfers.hashing=Preparing
