--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2375,7 +2375,7 @@ transfer_mode.manual_synchronization.name=Sincronizaci\u00f3n manual
 transfer_mode.no_sync.name=No sincronizar
 
 #orig#transfers.completed=Completed
-transfers.completed=terminados
+transfers.completed=terminados {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Copiando informaci\u00f3n
 #orig#transfers.from=From
