--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1717,7 +1717,7 @@ transfer.problem.transfer.exception=Exception d\u00e9t\u00e9ct\u00e9e sur un tra
 ##transfer_mode.no_sync.name=No synchronization
 
 #orig#transfers.completed=Completed
-transfers.completed=Termin\u00e9
+transfers.completed=Termin\u00e9 {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Copie de donn\u00e9es en cours
 #orig#transfers.from=From
