--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2374,7 +2374,7 @@ transfer_mode.manual_synchronization.name=Sincronizzazione manuale
 transfer_mode.no_sync.name=Nessuna sincronizzazione
 
 #orig#transfers.completed=Completed
-transfers.completed=completato
+transfers.completed=completato {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Copia dei dati in corso
 #orig#transfers.from=From
