--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1712,7 +1712,7 @@ transfer.problem.transfer.exception=\u8ee2\u9001\u306b\u95a2\u3059\u308b\u4f8b\u
 ##transfer_mode.no_sync.name=No synchronization
 
 #orig#transfers.completed=Completed
-transfers.completed=\u5b8c\u4e86
+transfers.completed=\u5b8c\u4e86 {0}
 #orig#transfers.copying=Copying data
 transfers.copying=\u30c7\u30fc\u30bf\u30b3\u30d4\u30fc\u4e2d
 #orig#transfers.from=From
