--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1533,7 +1533,7 @@ systray.tooltip.up.mb=Up {0} MBs
 ##transfer_mode.no_sync.name=No synchronization
 
 #orig#transfers.completed=Completed
-transfers.completed=klaar
+transfers.completed=klaar {0}
 ##transfers.copying=Copying data
 #orig#transfers.from=From
 transfers.from=Van
