--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -1594,7 +1594,7 @@ transfer.problem.transfer.exception=Wyst\u0105pi\u0142 wyj\u0105tek\: TransferEx
 ##transfer_mode.no_sync.name=No synchronization
 
 #orig#transfers.completed=Completed
-transfers.completed=Zako\u0144czono
+transfers.completed=Zako\u0144czono {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Kopiowanie danych
 #orig#transfers.from=From
