--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1617,7 +1617,7 @@ transfer.problem.transfer.exception=Ocorreu um erro de tranfer\u00eancia\: {0}
 ##transfer_mode.no_sync.name=No synchronization
 
 #orig#transfers.completed=Completed
-transfers.completed=Conclu\u00eddo
+transfers.completed=Conclu\u00eddo {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Copiando dados
 #orig#transfers.from=From
