--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1519,7 +1519,7 @@ systray.tooltip.up.mb=Upp {0} MBs
 ##transfer_mode.no_sync.name=No synchronization
 
 #orig#transfers.completed=Completed
-transfers.completed=klar
+transfers.completed=klar {0}
 ##transfers.copying=Copying data
 #orig#transfers.from=From
 transfers.from=Fr\u00e5n
