--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -2399,7 +2399,7 @@ transfer_mode.manual_synchronization.name=\u624b\u52a8\u540c\u6b65
 transfer_mode.no_sync.name=\u4e0d\u540c\u6b65
 
 #orig#transfers.completed=Completed
-transfers.completed=\u5df2\u5b8c\u6210
+transfers.completed=\u5df2\u5b8c\u6210 {0}
 #orig#transfers.copying=Copying data
 transfers.copying=\u6b63\u5728\u590d\u5236\u6570\u636e
 #orig#transfers.from=From
