--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1569,7 +1569,7 @@ transfer.problem.transfer.exception=\u0643\u0627\u0646 \u0647\u0646\u0627\u0643 
 ##transfer_mode.no_sync.name=No synchronization
 
 #orig#transfers.completed=Completed
-transfers.completed=\u0645\u0643\u062a\u0645\u0644
+transfers.completed=\u0645\u0643\u062a\u0645\u0644 {0}
 #orig#transfers.copying=Copying data
 transfers.copying=\u0646\u0633\u062e \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a
 #orig#transfers.from=From
