--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1715,7 +1715,7 @@ transfer.problem.transfer.exception=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u
 ##transfer_mode.no_sync.name=No synchronization
 
 #orig#transfers.completed=Completed
-transfers.completed=\u0433\u043e\u0442\u043e\u0432\u043e
+transfers.completed=\u0433\u043e\u0442\u043e\u0432\u043e {0}
 #orig#transfers.copying=Copying data
 transfers.copying=\u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0434\u0430\u043d\u043d\u044b\u0445
 #orig#transfers.from=From
