--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -851,7 +851,7 @@ exp_computer_view.collapse=Computer Details zuklappen
 #orig#exp_computer_view.expand=Expand computer details
 exp_computer_view.expand=Computer Details aufklappen
 #orig#exp_computer_view.last_seen_text=Last seen online\: {0}
-exp_computer_view.last_seen_text=Zuletzt Online gesehen\: {0}
+exp_computer_view.last_seen_text=Zuletzt Online\: {0}
 #orig#exp_computer_view.no_login=Not logged in
 exp_computer_view.no_login=Nicht angemeldet
 #orig#exp_computer_view.node_friend_connected_text=Connected friend computer
