--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -852,6 +852,7 @@ exp_computer_view.collapse=Computer Details zuklappen
 exp_computer_view.expand=Computer Details aufklappen
 #orig#exp_computer_view.last_seen_text=Last seen online\: {0}
 exp_computer_view.last_seen_text=Zuletzt Online\: {0}
+exp_computer_view.connected_text=Verbunden
 #orig#exp_computer_view.no_login=Not logged in
 exp_computer_view.no_login=Nicht angemeldet
 #orig#exp_computer_view.node_friend_connected_text=Connected friend computer
