--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1339,7 +1339,7 @@ general.thursday=Donnerstag
 general.time=%02d\:%02d\:%02d
 #orig#general.today=Today
 general.today=Heute
-##general.tomorrow=Tomorrow
+general.tomorrow=Morgen
 #orig#general.transfer_mode=Transfer mode
 general.transfer_mode=Transfer Modus
 #orig#general.tuesday=Tuesday
