Added wiki link to memory configuration on out of memory error

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1495,7 +1495,7 @@ low_memory.error.title=Kein Hauptspeicher
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Einstellungen erh\u00f6hen
 #orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
-low_memory.text={APPNAME} steht nicht gen\u00fcgend Hauptspeicher zu Verf\u00fcgung.\n\n{APPNAME} kann jetzt die Hauptspeicher-Einstellungen erh\u00f6hen.
+low_memory.text={APPNAME} steht nicht gen\u00fcgend Hauptspeicher zu Verf\u00fcgung.\n\n{APPNAME} kann jetzt die Hauptspeicher-Einstellungen erh\u00f6hen.\n\nMehr informationen unter:\n{0}
 #orig#low_memory.title=Low memory
 low_memory.title=Wenig Hauptspeicher
 
